--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "fs": "^0.0.1-security",
+    "googleapis": "^96.0.0",
     "next": "^12.1.0",
     "nodemailer": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-photo-gallery": "^8.0.0",
     "sass": "^1.42.1",
     "typewriter-effect": "^2.18.2"
   }
