--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "child_process": "^1.0.2",
     "fs": "^0.0.1-security",
     "googleapis": "^96.0.0",
     "next": "^12.1.0",
